# rust-blackhole

./: .gitignore  Cargo.toml  README.md
src/: args.yaml  env.rs  lib.rs  main.rs  physics.rs  render.rs
src/env/: euclid.rs  mod.rs  schwarzschild.rs  tests.rs
src/physics/: mod.rs  tests.rs
