[package]
name = "rust-blackhole"
version = "0.1.0"
authors = ["bakaq"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
nalgebra = "0.26.2"

[dependencies.sdl2]
version = "0.34.5"
features = ["static-link","use-pkgconfig"]
